# tree-sitter-vim

./: .editorconfig  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  keywords.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  main.yml
bindings/c/: tree-sitter-vim.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_vim/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterVimTests/: TreeSitterVimTests.swift
queries/: highlights.scm
rules/: autocmd.js  command.js  edit.js  highlight.js  keywords.js  syntax.js
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: embedded_langs.txt  range_statement.txt  source_statement.txt
